# FooEngine

./: .gitmodules  CMakeLists.txt  main.cpp
src/: camera.cpp  camera.hpp  foo_engine.cpp  foo_engine.hpp  game_object.cpp  game_object.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  window.cpp  window.hpp
src/models_loader/: mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/shaders/: default_fragmental.glsl  default_vertical.glsl
